フォルダ名変更

--- a/scss/objects/projects/_access.scss
+++ b/scss/objects/projects/_access.scss
@@ -16,7 +16,7 @@
     color: import.$color-base;
     letter-spacing: 0.1em;
     &::before {
-      content: url("/img/svg/comphair.svg");
+      content: url("/img/component/capello.svg");
       padding-right: 11px;
       vertical-align: middle;
     }
