--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -21,7 +21,7 @@
     text-align: center;
     letter-spacing: 0.1em;
     &::before {
-      content: url("/img/svg/comphair.svg");
+      content: url("/img/component/capello.svg");
       padding-right: 11px;
       vertical-align: middle;
     }
@@ -101,7 +101,7 @@
   letter-spacing: 0.1em;
   &::before {
     content: "";
-    background: url(/img/svg/noise.svg);
+    background: url(/img/component/noise.svg);
     position: absolute;
     top: 0;
     left: 0;
@@ -170,7 +170,10 @@
     }
     &__nav-item{
       letter-spacing: 0.1em;
-      padding-left:17px;
+      margin-left:17px;
+      &:hover{
+        border-bottom: 1px solid import.$color-base;
+      }
     }
 }
 }
