--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -15,8 +15,8 @@ html {
 }
 body {
   font-size: 1.6rem;
-  font-family: 'AvenirNext LT Pro', "ヒラギノ角ゴ Pro W3", serif;
-  font-weight:normal;
+  font-family: "AvenirNext LT Pro", "ヒラギノ角ゴ Pro W3", serif;
+  font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   min-width: 375px;
