--- a/scss/foundation/_color.scss
+++ b/scss/foundation/_color.scss
@@ -1,10 +1,8 @@
-$color-base: #FE929F;
+$color-base: #fe929f;
 $color-header: rgba(255, 255, 255, 0.5);
-$color-menu: #F9F3F1;
-$color-sdw: #9EDAE3;
-$color-fv: #FFF0FA;
+$color-menu: #f9f3f1;
+$color-sdw: #9edae3;
+$color-fv: #fff0fa;
 $color-black: #333333;
 $color-white: #fff;
-$color-transparent:transparent;
-
-
+$color-transparent: transparent;
