--- a/scss/objects/projects/_fv.scss
+++ b/scss/objects/projects/_fv.scss
@@ -94,7 +94,7 @@
       }
     }
     &__img-wrapper {
-      img{
+      img {
         width: 100%;
       }
       svg {
@@ -103,7 +103,7 @@
       }
     }
     &__text {
-      font-size: unquote('min(5.5vw, 64px)'); //scssでmin()とmax()を使用する場合
+      font-size: unquote("min(5.5vw, 64px)"); //scssでmin()とmax()を使用する場合
       letter-spacing: 0.15em;
     }
     &__card-wrapper {
@@ -121,7 +121,7 @@
       letter-spacing: 0.1em;
       font-family: "AvenirNext LT Pro";
       margin: 0;
-      &:hover{
+      &:hover {
         background-color: import.$color-base;
         color: import.$color-white;
       }
@@ -135,13 +135,13 @@
         padding: 4px 0 0 44px;
         content: url(/img/component/line.svg);
       }
-      &:hover{
-        &::before{
+      &:hover {
+        &::before {
           content: url(/img/component/line_hover.svg);
           transform: rotate(90deg);
           padding: 0px 0px 80px 0px;
         }
-        .p-index-fv__card-left-text{
+        .p-index-fv__card-left-text {
           transform: translateX(63px);
         }
       }
@@ -150,10 +150,10 @@
         padding: 3px 0 0 35px;
         content: url(/img/component/line.svg);
       }
-      &-wrapper{
+      &-wrapper {
         position: absolute;
         left: 0;
-        transform: translate(-58px,1px);
+        transform: translate(-58px, 1px);
       }
     }
     &__card-right {
@@ -165,17 +165,17 @@
         padding: 3px 0 0 56px;
         content: url(/img/component/instagram.svg);
       }
-      &:hover{
-        &::after{
+      &:hover {
+        &::after {
           content: url(/img/component/instagram_hover.svg);
           transform: rotate(270deg);
           padding: 120px 0px 0px 0px;
         }
       }
-      &-wrapper{
+      &-wrapper {
         position: absolute;
         right: 0;
-        transform: translate(58px,1px);
+        transform: translate(58px, 1px);
       }
     }
   }
