--- a/scss/objects/projects/_menu.scss
+++ b/scss/objects/projects/_menu.scss
@@ -136,35 +136,42 @@
       transform: translate(-388px, 4px);
       margin-bottom: 80.5px;
     }
-    &__wrapper{
+    &__wrapper {
       margin: 0 120px;
       max-width: 1000px;
       width: 69.444vw;
       height: 800px;
       margin-bottom: 122px;
-          /*アスペクト比の維持*/
-    aspect-ratio: 5/4;
+      /*アスペクト比の維持*/
+      aspect-ratio: 5/4;
     }
     &__lists {
       display: flex;
       flex-wrap: wrap;
       padding: 161px 0 0 0;
-      padding-left: unquote('min(8.333vw, 120px)'); //scssでmin()とmax()を使用する場合
-      .p-index-menu__list:nth-child(2){
+      padding-left: unquote(
+        "min(8.333vw, 120px)"
+      ); //scssでmin()とmax()を使用する場合
+      .p-index-menu__list:nth-child(2) {
         margin-top: 0;
-        margin-left: unquote('min(11.111vw, 160px)'); //scssでmin()とmax()を使用する場合
+        margin-left: unquote(
+          "min(11.111vw, 160px)"
+        ); //scssでmin()とmax()を使用する場合
       }
-      .p-index-menu__list:nth-child(4){
-        margin-left: unquote('min(11.111vw, 160px)'); //scssでmin()とmax()を使用する場合
+      .p-index-menu__list:nth-child(4) {
+        margin-left: unquote(
+          "min(11.111vw, 160px)"
+        ); //scssでmin()とmax()を使用する場合
       }
     }
-    &__list{
-        width:calc(50% - 140px) ;
+    &__list {
+      width: calc(50% - 140px);
     }
     &__triangle {
-      &:hover{
+      &:hover {
         background-color: import.$color-base;
-        .p-index-menu__triangle-text-01,.p-index-menu__triangle-text-02{
+        .p-index-menu__triangle-text-01,
+        .p-index-menu__triangle-text-02 {
           color: import.$color-white;
           &::before {
             background: import.$color-white;
@@ -172,8 +179,8 @@
           &::after {
             background: import.$color-white;
           }
+        }
       }
-    }
     }
   }
 }
