--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -135,6 +135,7 @@
     color: import.$color-black;
     text-decoration: none;
     padding: 0 0 46px 5px;
+    position: relative;
   }
 
   /* ハンバーガーメニュー押してactiveクラスを付いたら表示する */
